# cold-os

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  install_tools.sh  readme.md  x86_64-elf.cmake
src/impl/kernel/: main.c
src/impl/x86_64/: handler.c  idt.c  isr.c  isr_stub.asm  keyboard.c  memory.c  pic.c  print.c  stub_table.asm  vectors.asm
src/impl/x86_64/boot/: header.asm  main.asm  main64.asm
src/intf/: idt.h  io.h  isr.h  keyboard.h  memory.h  panic.h  pic.h  print.h  task.h  types.h
targets/x86_64/: linker.ld
targets/x86_64/iso/boot/grub/: grub.cfg
